--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gacha",
   "version": "0.0.1",
   "description": "Enjoy play for gacha!",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "build": "$(npm bin)/webpack",
     "watch": "$(npm bin)/webpack -w",
@@ -11,11 +11,13 @@
   "author": "Takahiro Ikeda",
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "^6.13.0",
     "doc-ready": "^1.0.4",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
     "react-redux": "^4.4.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-actions": "^0.12.0"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
