--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Enjoy play for gacha!",
   "main": "src/index.js",
   "scripts": {
-    "build": "$(npm bin)/webpack",
-    "watch": "$(npm bin)/webpack -w",
+    "build": "node_modules/.bin/webpack",
+    "watch": "node_modules/.bin/webpack -w",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Takahiro Ikeda",
